force-app/main/default/objects/VoiceCall/fields/campoprueba__c.field-meta.xml
<CustomField>
    <fullName>campoprueba__c</fullName>
    <label>campoprueba</label>
    <length>10</length>
    <type>Text</type>
</CustomField>