force-app/main/default/objects/VoiceCall/fields/OM_Account__c.field-meta.xml
<CustomField>
    <fullName>OM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Llamadas</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>