force-app/main/default/objects/VoiceCall/fields/OM_AccountDataAlert__c.field-meta.xml
<CustomField>
    <fullName>OM_AccountDataAlert__c</fullName>
    <formula>NOT(ISBLANK(OM_Account__c)) &amp;&amp; ISBLANK(OM_Account__r.PersonEmail) &amp;&amp; ISBLANK(OM_Account__r.Phone) &amp;&amp; ISBLANK(OM_Account__r.CorreoElectronicoSecundario__c) &amp;&amp; ISBLANK(OM_Account__r.PersonMobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Data Alert</label>
    <type>Checkbox</type>
</CustomField>