force-app/main/default/objects/VoiceCall/fields/OM_Attribution__c.field-meta.xml
<CustomField>
    <fullName>OM_Attribution__c</fullName>
    <label>Attribution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OM_PhoneOrigin</valueSetName>
    </valueSet>
</CustomField>