force-app/main/default/objects/VoiceCall/fields/OM_CallCategory__c.field-meta.xml
<CustomField>
    <fullName>OM_CallCategory__c</fullName>
    <label>Tipología</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OM_Department__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CANDIDATO POTENCIAL CALL CENTER</fullName>
            </value>
            <value>
                <fullName>CANDIDATO POTENCIAL VENTAS</fullName>
            </value>
            <value>
                <fullName>CLIENTE ACTIVO CALL CENTER</fullName>
            </value>
            <value>
                <fullName>CLIENTE ACTIVO VENTAS</fullName>
            </value>
            <value>
                <fullName>CONTACTO NO VÁLIDO ATC</fullName>
            </value>
            <value>
                <fullName>CONTACTO NO VÁLIDO CALL CENTER</fullName>
            </value>
            <value>
                <fullName>CONTACTO NO VÁLIDO CONTROL DE GESTIÓN</fullName>
            </value>
            <value>
                <fullName>CONTACTO NO VÁLIDO EJECUCIONES</fullName>
            </value>
            <value>
                <fullName>CONTACTO NO VÁLIDO GDC</fullName>
            </value>
            <value>
                <fullName>CONTACTO NO VÁLIDO GESTIÓN DE CLIENTE</fullName>
            </value>
            <value>
                <fullName>CONTACTO NO VÁLIDO JURA/RECOBRO</fullName>
            </value>
            <value>
                <fullName>CONTACTO NO VÁLIDO PROCESAL</fullName>
            </value>
            <value>
                <fullName>CONTACTO NO VÁLIDO REDACCIÓN</fullName>
            </value>
            <value>
                <fullName>CONTACTO NO VÁLIDO VENTAS</fullName>
            </value>
            <value>
                <fullName>DERIVADO ATC</fullName>
            </value>
            <value>
                <fullName>DERIVADO CONTROL DE GESTIÓN</fullName>
            </value>
            <value>
                <fullName>DERIVADO EJECUCIONES</fullName>
            </value>
            <value>
                <fullName>DERIVADO GDC</fullName>
            </value>
            <value>
                <fullName>DERIVADO GESTIÓN DE CLIENTE</fullName>
            </value>
            <value>
                <fullName>DERIVADO JURA/RECOBRO</fullName>
            </value>
            <value>
                <fullName>DERIVADO PROCESAL</fullName>
            </value>
            <value>
                <fullName>DERIVADO REDACCIÓN</fullName>
            </value>
            <value>
                <fullName>INFORMACIÓN ATC</fullName>
            </value>
            <value>
                <fullName>INFORMACIÓN CALL CENTER</fullName>
            </value>
            <value>
                <fullName>INFORMACIÓN CONTROL DE GESTIÓN</fullName>
            </value>
            <value>
                <fullName>INFORMACIÓN EJECUCIONES</fullName>
            </value>
            <value>
                <fullName>INFORMACIÓN GDC</fullName>
            </value>
            <value>
                <fullName>INFORMACIÓN GESTIÓN DE CLIENTE</fullName>
            </value>
            <value>
                <fullName>INFORMACIÓN JURA/ RECOBRO</fullName>
            </value>
            <value>
                <fullName>INFORMACIÓN PROCESAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>