force-app/main/default/objects/VoiceCall/fields/OM_CallSubcategory__c.field-meta.xml
<CustomField>
    <fullName>OM_CallSubcategory__c</fullName>
    <label>Categorización</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OM_CallCategory__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acuerdos</fullName>
            </value>
            <value>
                <fullName>Agendada nueva cita</fullName>
            </value>
            <value>
                <fullName>Anulación cita</fullName>
            </value>
            <value>
                <fullName>Anulación cita informativa/completado</fullName>
            </value>
            <value>
                <fullName>ASESORÍA COMERCIAL</fullName>
            </value>
            <value>
                <fullName>ATENCIÓN AL CLIENTE</fullName>
            </value>
            <value>
                <fullName>CALL CENTER</fullName>
            </value>
            <value>
                <fullName>Cambio cita</fullName>
            </value>
            <value>
                <fullName>Cambio cita informativa/completado</fullName>
            </value>
            <value>
                <fullName>Cambio de estado posterior</fullName>
            </value>
            <value>
                <fullName>Cita directa</fullName>
            </value>
            <value>
                <fullName>Cita errónea</fullName>
            </value>
            <value>
                <fullName>Cita informativa/completado</fullName>
            </value>
            <value>
                <fullName>Cita presencial</fullName>
            </value>
            <value>
                <fullName>Cita telefónica</fullName>
            </value>
            <value>
                <fullName>Cita videollamada</fullName>
            </value>
            <value>
                <fullName>COBROS</fullName>
            </value>
            <value>
                <fullName>Confirmación de Cita</fullName>
            </value>
            <value>
                <fullName>Contacto gestionado</fullName>
            </value>
            <value>
                <fullName>DERIVADO FRAILE MENA</fullName>
            </value>
            <value>
                <fullName>DERIVADO SSJJ</fullName>
            </value>
            <value>
                <fullName>Derivo a asesor</fullName>
            </value>
            <value>
                <fullName>Derivo a Comercial</fullName>
            </value>
            <value>
                <fullName>Derivo a Gestión de cobros</fullName>
            </value>
            <value>
                <fullName>Derivo a Procesal</fullName>
            </value>
            <value>
                <fullName>Derivo a Recobro</fullName>
            </value>
            <value>
                <fullName>Derivo a Resoluciones</fullName>
            </value>
            <value>
                <fullName>Dudas HE y procedimiento</fullName>
            </value>
            <value>
                <fullName>DUPLICADO</fullName>
            </value>
            <value>
                <fullName>EJECUCIONES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>