force-app/main/default/objects/VoiceCall/fields/OM_Case__c.field-meta.xml
<CustomField>
    <fullName>OM_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Voice Calls</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>