force-app/main/default/objects/VoiceCall/fields/OM_CategorizationAlert__c.field-meta.xml
<CustomField>
    <fullName>OM_CategorizationAlert__c</fullName>
    <formula>ISPICKVAL(OM_Type__c , &quot;&quot;) || ISPICKVAL( OM_CallCategory__c , &quot;&quot;) || ISPICKVAL(  OM_CallSubcategory__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alerta Categorización</label>
    <type>Checkbox</type>
</CustomField>