force-app/main/default/objects/VoiceCall/fields/OM_Contract__c.field-meta.xml
<CustomField>
    <fullName>OM_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expediente</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Voice Calls</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>