force-app/main/default/objects/VoiceCall/fields/OM_DNI__c.field-meta.xml
<CustomField>
    <fullName>OM_DNI__c</fullName>
    <label>DNI / NIE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>