force-app/main/default/objects/VoiceCall/fields/OM_DNIFormula__c.field-meta.xml
<CustomField>
    <fullName>OM_DNIFormula__c</fullName>
    <formula>IF(ISPICKVAL(CallType , &quot;Transfer&quot;),PreviousCall.OM_DNI__c,OM_DNI__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNI</label>
    <type>Text</type>
</CustomField>