force-app/main/default/objects/VoiceCall/fields/OM_GDPRFormula__c.field-meta.xml
<CustomField>
    <fullName>OM_GDPRFormula__c</fullName>
    <formula>IF(ISPICKVAL(CallType , &quot;Transfer&quot;),IF(ISPICKVAL(PreviousCall.OM_GDPR__c, &quot;Yes&quot;), $Label.OM_Yes, IF(ISPICKVAL(PreviousCall.OM_GDPR__c, &quot;No&quot;), $Label.OM_No,&quot;&quot;) ),IF(ISPICKVAL(OM_GDPR__c, &quot;Yes&quot;), $Label.OM_Yes, IF(ISPICKVAL(OM_GDPR__c, &quot;No&quot;), $Label.OM_No,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GDPR</label>
    <type>Text</type>
</CustomField>