force-app/main/default/objects/VoiceCall/fields/OM_GenerateCB__c.field-meta.xml
<CustomField>
    <fullName>OM_GenerateCB__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <inlineHelpText>Indica si el cliente ha llegado a la locución donde indica si quiere que se le vuelva a llamar.</inlineHelpText>
    <label>Generar CB (Cliente)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Sí</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>