force-app/main/default/objects/VoiceCall/fields/OM_isClient__c.field-meta.xml
<CustomField>
    <fullName>OM_isClient__c</fullName>
    <label>Es cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Sí</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>