force-app/main/default/objects/VoiceCall/fields/OM_isClientFormula__c.field-meta.xml
<CustomField>
    <fullName>OM_isClientFormula__c</fullName>
    <formula>IF(ISPICKVAL(CallType , &quot;Transfer&quot;),IF(ISPICKVAL(PreviousCall.OM_isClient__c, &quot;1&quot;), $Label.OM_Yes, IF(ISPICKVAL(PreviousCall.OM_isClient__c, &quot;2&quot;), $Label.OM_No,&quot;&quot;) ),IF(ISPICKVAL(OM_isClient__c, &quot;1&quot;), $Label.OM_Yes, IF(ISPICKVAL(OM_isClient__c, &quot;2&quot;), $Label.OM_No,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es cliente</label>
    <type>Text</type>
</CustomField>