force-app/main/default/objects/VoiceCall/fields/OM_Lead__c.field-meta.xml
<CustomField>
    <fullName>OM_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Llamadas</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>