force-app/main/default/objects/VoiceCall/fields/OM_OfficeQueue__c.field-meta.xml
<CustomField>
    <fullName>OM_OfficeQueue__c</fullName>
    <description>Campo que almacena la cola en caso de que la llamada se realice a una oficina.</description>
    <inlineHelpText>Si la llamada se ha realizado a un teléfono de oficina, almacena el nombre de la cola correspondiente a esa oficina.</inlineHelpText>
    <label>Cola Oficina</label>
    <length>255</length>
    <type>Text</type>
</CustomField>