force-app/main/default/objects/VoiceCall/fields/OM_OriginCallback__c.field-meta.xml
<CustomField>
    <fullName>OM_OriginCallback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Registro de callback que ha originado la llamada.</inlineHelpText>
    <label>Callback Origen</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El registro debe ser de tipo Callback</errorMessage>
        <filterItems>
            <field>OM_Callback__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Callback</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OM_Callback__c</referenceTo>
    <relationshipLabel>Voice Calls (Callback Origen)</relationshipLabel>
    <relationshipName>Llamadas_emitidas</relationshipName>
    <type>Lookup</type>
</CustomField>