force-app/main/default/objects/VoiceCall/fields/OM_OriginQueue__c.field-meta.xml
<CustomField>
    <fullName>OM_OriginQueue__c</fullName>
    <inlineHelpText>Determina a qué cola irá asignada el Callback generado (en caso de que lo haya)</inlineHelpText>
    <label>Cola Origen CB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>