force-app/main/default/objects/VoiceCall/fields/OM_OutboundCall__c.field-meta.xml
<CustomField>
    <fullName>OM_OutboundCall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Llamada saliente programada que ha originado el registro de llamada.</inlineHelpText>
    <label>Llamada Saliente Programada</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Este registro tiene que ser una llamada saliente programada.</errorMessage>
        <filterItems>
            <field>OM_Callback__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Llamada Saliente</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OM_Callback__c</referenceTo>
    <relationshipLabel>Llamadas emitidas</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>