force-app/main/default/objects/VoiceCall/fields/OM_OutOfTime__c.field-meta.xml
<CustomField>
    <fullName>OM_OutOfTime__c</fullName>
    <description>Indica si la llamada se ha emitido fuera de horario</description>
    <label>Fuera de horario</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Sí</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>