force-app/main/default/objects/VoiceCall/fields/OM_RecordingAccepted__c.field-meta.xml
<CustomField>
    <fullName>OM_RecordingAccepted__c</fullName>
    <label>Acepta Grabación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Sí</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>