force-app/main/default/objects/VoiceCall/fields/OM_RequestedByAgent__c.field-meta.xml
<CustomField>
    <fullName>OM_RequestedByAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determina si el agente ha solicitado verbalmente el permiso para grabar la conversación.</description>
    <label>Solicitado por agente</label>
    <type>Checkbox</type>
</CustomField>