force-app/main/default/objects/VoiceCall/fields/OM_Type__c.field-meta.xml
<CustomField>
    <fullName>OM_Type__c</fullName>
    <label>Origen de llamada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Callback</fullName>
            </value>
            <value>
                <fullName>Entrante</fullName>
            </value>
            <value>
                <fullName>Formulario</fullName>
            </value>
            <value>
                <fullName>Recaptura</fullName>
            </value>
            <value>
                <fullName>Saliente Operativa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>