force-app/main/default/objects/VoiceCall/validationRules/OM_FormularioCallCenter.validationRule-meta.xml
<ValidationRule>
    <fullName>OM_FormularioCallCenter</fullName>
    <active>true</active>
    <description>Si el campo Origen de llamada se rellena con “Formulario”, el departamento seleccionado debe ser obligatoriamente Call Center. De lo contrario, no dejará elegir el origen “Formulario”.</description>
    <errorConditionFormula>AND(ISPICKVAL(OM_Type__c,&apos;Formulario&apos;), NOT(ISPICKVAL(OM_Department__c,&apos;CALL CENTER&apos;)))</errorConditionFormula>
    <errorDisplayField>OM_Type__c</errorDisplayField>
    <errorMessage>El origen no puede ser &quot;Formulario&quot; cuando el departamento no es CALL CENTER</errorMessage>
</ValidationRule>