force-app/main/default/objects/VoiceCall/validationRules/OM_RecapturaCallCenterVentas.validationRule-meta.xml
<ValidationRule>
    <fullName>OM_RecapturaCallCenterVentas</fullName>
    <active>true</active>
    <description>Si el campo Origen de llamada se rellena con “Recaptura”, el departamento seleccionado debe ser obligatoriamente Call Center o Ventas. De lo contrario, no dejará elegir el origen “Recaptura”.</description>
    <errorConditionFormula>AND(
ISPICKVAL(OM_Type__c,&apos;Recaptura&apos;),
AND(
NOT(ISPICKVAL(OM_Department__c,&apos;CALL CENTER&apos;)),
NOT(ISPICKVAL(OM_Department__c,&apos;VENTAS&apos;))
)
)</errorConditionFormula>
    <errorDisplayField>OM_Type__c</errorDisplayField>
    <errorMessage>El origen no puede ser &quot;Recaptura&quot; cuando el departamento no es &quot;CALL CENTER&quot; o &quot;VENTAS&quot;</errorMessage>
</ValidationRule>