force-app/main/default/objects/VoiceCall/listViews/SCV_ADMINS_OFI_ALCA_VoiceCall.listView-meta.xml
<ListView>
    <fullName>SCV_ADMINS_OFI_ALCA_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>ADMINS OFI ALCA</label>
    <queue>SCV_ADMINS_OFI_ALCA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>