force-app/main/default/objects/VoiceCall/listViews/SCV_ADMINS_OFI_BILBO_VoiceCall.listView-meta.xml
<ListView>
    <fullName>SCV_ADMINS_OFI_BILBO_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>ADMINS OFI BILBO</label>
    <queue>SCV_ADMINS_OFI_BILBO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>